# INSIGHT

./: .cursorignore  .gitignore  README.md  pyproject.toml
docs/files/: cf2insights_config.yaml  environment.yml  template_bulk_summary.html  template_simple.html  template_simple_str.html
in_sight/: add_attr_info.py  import_files.py  meta_info.py  reads_import.py  reads_manager.py  reads_type.py  samplers.py  str_utils.py  str_vis_flow.py  utils.py  vis_flow.py
in_sight/analysis/: __init__.py  feature_calulate.py  hmm_model.py  prob_pm.py
in_sight/commands/: bayesmonstr2insights.py  cf2insights.py  cf2insights_bulk.py
in_sight/r_script/: plot_base.R  plot_base_hsnp.R  plot_base_points.R  plot_plain_with_full_features.R  whole_workflow_plot_plain_with_full_features_better.R
in_sight/templates/: column_config_v4.csv  str_report.html
scripts/: test.ipynb
